cmake_minimum_required(VERSION 4.2)
project(Fuentes_Biblioteca_2024_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Fuentes_Biblioteca_2024_1 main.cpp
        Bibliotecas/Utils.hpp
        Bibliotecas/Estructuras.h
        Bibliotecas/SobreCarga.cpp
        Bibliotecas/SobreCarga.hpp
        Bibliotecas/Funciones.cpp
        Bibliotecas/Funciones.hpp)
